# tobelog

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  README.md  SYSTEMD.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml
docker-scripts/: build.sh  deploy.sh
docs/: api-specification.md
migrations/: 001_create_posts_table.sql  002_create_categories_table.sql  003_create_media_table.sql  004_create_post_versions_table.sql  005_create_themes_table.sql  006_performance_optimizations.sql
nginx/: nginx.conf
scripts/: backup.sh  install-systemd.sh  manage-service.sh  monitor.sh  setup_dropbox.sh  ssl-renewal.sh  update.sh
src/: config.rs  lib.rs  main.rs  middleware.rs
src/handlers/: admin.rs  api.rs  mod.rs  performance.rs  posts.rs  theme.rs  version.rs
src/middleware/: performance.rs
src/models/: media.rs  metadata.rs  mod.rs  post.rs  response.rs  theme.rs  version.rs
src/services/: blog_storage.rs  cache.rs  database.rs  dropbox.rs  llm_import.rs  llm_processor.rs  markdown.rs  media.rs  mod.rs  template.rs  theme.rs  version.rs
static/css/: main.css
static/js/: highlight.js
systemd/: tobelog-backup.service  tobelog-backup.timer  tobelog-monitor.service  tobelog-monitor.timer  tobelog.service
templates/: base.html
templates/admin/: base.html  dashboard.html  import_result.html  llm_import.html
templates/blog/: index.html  post.html
templates/blog/admin/: import.html  import_result.html
templates/default/: category.html
templates/default/admin/: dashboard.html
templates/minimal/: base.html  index.html
templates/minimal/admin/: post_list.html
templates/modern/: tag.html
templates/modern/admin/: base.html  post_form.html
tests/: deployment_guide_test.rs  documentation_test.rs  mod.rs  template_switching_test.rs  warning_validation_test.rs
tests/integration/: cicd_config_test.rs  database_connection_test.rs  mod.rs  ssl_config_test.rs
