[package]
name = "tobelog"
version = "0.1.0"
edition = "2021"
description = "Personal blog system with Dropbox storage integration"
authors = ["junichiro"]
default-run = "tobelog"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
pulldown-cmark = "0.10"
tera = "1.19"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml = "0.9"
toml = "0.8"
html-escape = "0.2"
regex = "1.0"
axum-extra = { version = "0.9", features = ["multipart"] }
image = "0.24"
mime = "0.3"
base64 = "0.21"
sha2 = "0.10"

[features]
default = []
metadata = []
expensive_tests = []

[dev-dependencies]
tempfile = "3.0"

